[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Textbox.gd" type="Script" id=1]
[ext_resource path="res://UI/TimesNewPixel.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0313726, 0.0313726, 0.0313726, 0.482353 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.72549, 0.666667, 0.533333, 1 )

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0313726, 0.0313726, 0.0313726, 0.482353 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = ExtResource( 2 )

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 33.0
margin_top = -75.0
margin_right = -73.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 214.0
margin_bottom = 67.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 214.0
margin_bottom = 67.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 206.0
margin_bottom = 59.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 206.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 198.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "placeholder text: the quick brown"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 48.0
margin_right = 206.0
margin_bottom = 59.0
size_flags_vertical = 12
custom_fonts/font = SubResource( 6 )
text = "v"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
